# PhotoMosaic

./: CMakeLists.txt  README.md  config_example.ini
cmake/: FindQt.cmake
src/: Config.cpp  Config.h  Mosaic.cpp  Mosaic.h  imageUtils.cpp  imageUtils.h  main.cpp
